# compoid-mcp

./: .env.example  .gitignore  COMPOID_SYSTEM_PROMPT.md  CONTRIBUTING.md  LICENSE  Makefile  PACKAGING.md  README.md  REMOTE_FILE_UPLOAD_GUIDE.md  SECURITY.md  compoid-mcp-free-local.json  compoid-mcp-pro-local.json  copilot-instructions.md  pyproject.toml  vscode-compoid-free-mcp.json  vscode-compoid-pro-mcp.json
src/compoid_mcp/: __init__.py  client.py  config.py  logutil.py  models.py  server.py  tools.py
src/compoid_mcp/templates/: communitydict-extended.json  communitydict.json  compoid-filestemplate.json  compoid-reviewtemplate.json  compoid-template.json  resourcetypedict.json  system-role-schema.json
