[project]
name = "compoid-mcp"
version = "1.0.0"
description = "MCP Server for Compoid AI repository"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.1", 
    "pydantic>=2.0.0",
    "anyio>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.6",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "mcp[cli]>=1.10.1",
    "pydantic>=2.0.0",
    "fastmcp==2.14.3",
    "numpy>=2.2.5",
    "ffmpeg-python==0.2.0",
    "pillow>=11.2.1",
    "python-pptx>=1.0.2",
    "python-dotenv>=1.2.1",
    "starlette>=0.50.0",
    "uvicorn>=0.40.0",
    "jinja2>=3.16.0",
    
    # File Processing
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    
    # Data Processing
    "pyyaml>=6.0.0",
    "python-frontmatter>=1.1.0",
    "markdown>=3.5.0",
    
    # Async Support
    "aiofiles>=23.0.0",
    "asyncio-throttle>=1.0.2",
    
    # Utilities
    "pathlib-mate>=1.2.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.8.0",

]

[project.scripts]
compoid-mcp = "compoid_mcp.server:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11
strict = true